--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Html_creator)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Html_creator main.cpp head_tag.h body_tag.h tag_builder.h tag_builder.cpp)
+add_executable(Html_creator main.cpp head_tag.h body_tag.h tag_builder.h paragraph_tag.h div_tag.h)
