static library files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 3.23)
 project(Html_creator)
 
 set(CMAKE_CXX_STANDARD 20)
+add_executable(Html_creator main.cpp)
 
-add_executable(Html_creator main.cpp head_tag.h body_tag.h tag_builder.h paragraph_tag.h div_tag.h)
+target_include_directories(Html_creator PUBLIC
+        base_tags/ container_tags/ text_tags/ other_tags/)
+
